--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.4</version>
+        <version>2.6.7</version>
         <relativePath/> <!-- 从仓库下载，不找本地 -->
     </parent>
 
@@ -57,18 +57,19 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.6.7</version> <!-- 和父工程版本一致 -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <!-- 允许清单文件引用外部依赖（若有） -->
-                            <addClasspath>true</addClasspath>
-                            <!-- 核心：替换为你的主类全路径（如 com.hzcxyd.SreDemoApplication） -->
-                            <mainClass>com.it.sredemo.SredemoApplication</mainClass>
-                        </manifest>
-                    </archive>
+                    <!-- 替换为你的主类全路径（包名+类名） -->
+                    <mainClass>com.it.sredemo.SredemoApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
